--- a/templates/index/index.html.twig
+++ b/templates/index/index.html.twig
@@ -123,10 +123,12 @@
                         <div class="col p-1">{{ form_row(form.email) }}</div>
                         <div class="col p-1">{{ form_row(form.mdpClair) }}</div>
                         <br>
+
                         <button type="submit" class="btn btn-dark col-md-8 p-1" id="boutoninscription">
                             Inscription
                         </button>
 
+                        {{ form_end(form) }}
                     </div>
                 </div>
             </div>
