--- a/templates/profil/edit.html.twig
+++ b/templates/profil/edit.html.twig
@@ -68,7 +68,7 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <p>Etês-vous sûr de vouloir supprimer votre compte ?
+                    <p>Etes-vous sûr de vouloir supprimer votre compte ?
                         <br><br>Attention, cette action est irréversible !</p>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
