--- a/public/css/suggestions.css
+++ b/public/css/suggestions.css
@@ -32,10 +32,7 @@
     text-align: center;
 }
 .voici {
-    font-size: 2em;
-}
-.pouvez {
-    font-size: 1em;
+    font-size: 120%;
 }
 .visiter {
     font-size: 1em;
