--- a/templates/index/index.html.twig
+++ b/templates/index/index.html.twig
@@ -35,13 +35,13 @@
         <!-------- Fin formulaire de connexion -------->
 
         <!-------- Bannière -------->
-        <div class="row">
+        <div class="row banniere">
             <div class="col text-center mt-5 mb-4">
-                <h1 class="bienvenue">Bienvenue sur <br>
-                    <span class="nomdusite">Filmami</span>
+                <h1><span class="bienvenue">Bienvenue sur </span><br>
+                    <span class="double">Filmami</span>
                 </h1>
                 <div class="argument">Rencontrez des gens qui partagent votre passion.</div>
-                <br>
+
             </div>
         </div>
         <!-------- Fin bannière -------->
@@ -55,7 +55,7 @@
                             <img class="d-block w-100" src="{{ asset('img/img1carousel.jpg') }}" alt="First slide">
                         </div>
                         <div class="carousel-item">
-                            <img class="d-block w-100" src="{{ asset('img/sallecinema.png') }}" alt="Second slide">
+                            <img class="d-block w-100" src="{{ asset('img/img3carousel.jpg') }}" alt="Second slide">
                         </div>
                         <div class="carousel-item">
                             <img class="d-block w-100" src="{{ asset('img/img2carousel.jpg') }}" alt="Third slide">
