--- a/templates/suggestion/index.html.twig
+++ b/templates/suggestion/index.html.twig
@@ -17,22 +17,12 @@
 
     <div class="container-fluid">
         <div class="centrez">
-            <span class="voici">Voici les personnes près de chez vous qui partagent vos goûts cinématographiques!</span>
-            <br>
-            <div class="colonnes">
-                <div>
-                    <span class="pouvez">Vous pouvez :</span> <br>
-                    <span class="visiter">- Visiter leur profil, et peut-être ensuite leur proposer d'être votre ami sur ce site.</span>
-                    <br>
-                    <span>- Ou directement leur envoyer un mail pour leur proposer une séance!</span>
-                </div>
-                <div>
-                    <span class="bonfilm">Bon film !</span>
-                </div>
-            </div>
+            <p class="voici">Voici les personnes près de chez vous qui partagent vos goûts cinématographiques! Vous pouvez :
+                visiter leur profil, et peut-être ensuite leur proposer d'être votre ami sur ce site,
+                ou directement leur envoyer un mail pour leur proposer une séance, <span class="bonfilm">Bon film!</span>
+            </p>
         </div>
         <hr>
-
 
         <div class="col-12">
             <!--          Container des 3 cartes pour traitement Ajax          -->
