--- a/public/css/filmami_commun.css
+++ b/public/css/filmami_commun.css
@@ -39,6 +39,10 @@ footer {
 footer a {
     color: white;
 }
+footer a:hover {
+    color: white;
+    text-decoration:none;
+}
 .double {
     font-size: 2em;
 }
