--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -19,7 +19,9 @@
 {#         ///////         NAVBAR    ADMIN            ///////               #}
 {% if is_granted('ROLE_ADMIN') %}
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
-        <a href="{{ path('app_index_index') }}"  alt=""><img class="navbar-brand" width="85" height="50" src="{{ asset('img/logo.png') }}" alt=""></a>
+        <a href="{{ path('app_index_index') }}"  alt=""><img class="navbar-brand" width="85" height="60" src="{{ asset('img/logo.png') }}" alt=""></a>
+        <a href="{{ path('app_index_index') }}"  alt=""><img class="navbar-brand" width="85" height="60" src="{{ asset('img/logo11.jpg') }}" alt=""></a>
+        <a href="{{ path('app_index_index') }}"  alt=""><img class="navbar-brand" width="85" height="60" src="{{ asset('img/logo222.png') }}" alt=""></a>
         <a class="navbar-brand" href="{{ path('app_index_index') }}">FilmAmi</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
                 aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
