--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -113,9 +113,9 @@
     <footer>
         <span>Nos réseaux sociaux :</span>
         <div class="row">
-            <a href="https://twitter.com/"><img src="img/logo_twitter.png" alt=""></a>
-            <a href="https://www.instagram.com/"><img src=img/logo_instagram.png alt=""></a>
-            <a href="https://www.facebook.com/"><img src="img/logo_facebook.png" alt=""></a>
+            <a href="https://twitter.com/"><img src="{{ asset('img/logo_twitter.png') }}" alt=""></a>
+            <a href="https://www.instagram.com/"><img src="{{ asset('img/logo_instagram.png') }}" alt=""></a>
+            <a href="https://www.facebook.com/"><img src="{{ asset('img/logo_facebook.png') }}" alt=""></a>
         </div>
         <span><a class="double" href="{{ path('app_index_contact') }}">Contactez-nous !</a></span>
 
