--- a/templates/index/index.html.twig
+++ b/templates/index/index.html.twig
@@ -11,12 +11,12 @@
 {% block body %}
     <div class="container-fluid">
         <!-------------------------- HEADER --------------------------------------->
-        <div class="row d-flex justify-content-center" id="login">
-            <div class="col mt-4">
+        <div class="row d-flex justify-content-center mt-2" id="login">
+            <div class="col">
 
                 <!-------- Formulaire de connexion -------->
                 <form class="form-inline" action="{{ path('app_index_connexion') }}" method="post">
-                    <div class="form-group mr-3 mt-2">Déjà membre ?</div>
+                    <div class="form-group mr-3">Déjà membre ?</div>
                     <div class="form-group mr-3 mb-2">
                         <label for="inputPassword2" class="sr-only">Email</label>
                         <input type="email" class="form-control" name="_username" value="" placeholder="Email"
@@ -55,7 +55,7 @@
                             <img class="d-block w-100" src="{{ asset('img/img1carousel.jpg') }}" alt="First slide">
                         </div>
                         <div class="carousel-item">
-                            <img class="d-block w-100" src="{{ asset('img/img3carousel.jpg') }}" alt="Second slide">
+                            <img class="d-block w-100" src="{{ asset('img/sallerouge4.jpg') }}" alt="Second slide">
                         </div>
                         <div class="carousel-item">
                             <img class="d-block w-100" src="{{ asset('img/img2carousel.jpg') }}" alt="Third slide">
