--- a/public/css/filmami_accueil.css
+++ b/public/css/filmami_accueil.css
@@ -14,6 +14,11 @@ h4 {
 .bienvenue {
     font-size: small;
 }
+/*   ----------------    nom du site  -------------*/
+
+.police1 {
+    font-family: 'Saira Stencil One', cursive;
+}
 /* ---------------  Media querie 790 px ----------------- */
 @media (max-width: 790px) {
     #main {
