--- a/templates/suggestion/profil.html.twig
+++ b/templates/suggestion/profil.html.twig
@@ -42,7 +42,7 @@
 
                         <!-------- Col Droite -------->
                         <div class="col-xs ml-5 mt-5 mr-5 mb-5" id="droite">
-                            <div class="col text-center mb-4 p-1" ><h2>{{ profilsuggestion.pseudo }}</h2></div>
+                            <div class="col text-center mb-4 p-1" ><h2 class="pseudo">{{ profilsuggestion.pseudo }}</h2></div>
                             <div class="col p-1">Ville <span class="txt">:</span> {{ profilsuggestion.ville.nom }}</div>
 
                             <!-------- L'âge renseigné ou non -------->
