--- a/public/css/filmami_commun.css
+++ b/public/css/filmami_commun.css
@@ -22,6 +22,9 @@
     display: flex;
     align-items: center;
 }
+.police1 {
+    font-family: 'Saira Stencil One', cursive;
+}
 body {
     margin-top: 82px
 }
