--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -48,7 +48,9 @@
                     <a class="nav-item nav-link nav-link2" href="#">Bonjour {{ app.user }} !</a>
                 </div>
                 <div>
-                    <button class="nav-item btn btn-outline-dark my-2 my-sm-0" type="submit"><a href="{{ path('app_profil_index') }}">Chattez en ligne!</a></button>
+{#
+                    <button class="nav-item btn btn-outline-dark my-2 my-sm-0" type="submit"><a href="{{ path('/chat/index') }}">Chattez en ligne!</a></button>
+#}
                 </div>
                 <div>
                     <button class="nav-item btn btn-outline-dark my-2 my-sm-0" type="submit"><a href="{{ path('app_index_logout') }}">Déconnexion</a></button>
@@ -84,7 +86,9 @@
                     <a class="nav-item nav-link nav-link2" href="#">Bonjour {{ app.user }} !</a>
                 </div>
                 <div>
-                    <button class="nav-item btn btn-outline-dark my-2 my-sm-0" type="submit"><a href="{{ path('app_profil_index') }}">Chattez en ligne!</a></button>
+{#
+                    <button class="nav-item btn btn-outline-dark my-2 my-sm-0" type="submit"><a href="{{ path('/chat/index') }}">Chattez en ligne!</a></button>
+#}
                 </div>
                 <div>
                     <button class="nav-item btn btn-outline-dark my-2 my-sm-0" type="submit"><a href="{{ path('app_index_logout') }}">Déconnexion</a></button>
